# storage-analyzer

./: .gitignore  README.md  config.yaml  pyproject.toml
src/disktrend/: __init__.py  models.py  scanner.py  scheduler.py  server.py
templates/: index.html
